--- a/public/index.html
+++ b/public/index.html
@@ -610,6 +610,54 @@ workout are items that I do my best to accomodate them in my life</p>
 
 
 
+
+<section class="section blog-preview" id="blog">
+	<div class="blog-preview__shape">
+		<img src="images/blog/blog-shape.svg" alt="blog shape" />
+	</div>
+	<div class="container">
+		<div class="row mb-5">
+			<div class="col-lg-6">
+				<div class="blog-preview__header">
+					<span class="top-title pre-line">Blog</span>
+					<h2 id="what-is-different-that-made-me-obsesst-with-data-analysis">What is Different that Made me obsesst with DATA ANALYSIS</h2>
+<p>Enjoy team diversity and increase their networks among others people in various fields by provided.</p>
+				</div>
+			</div>
+			<div class="col-lg-6">
+				<div class="blog-preview__header_button desktop">
+					<a class="btn btn-outline-secondary  btn-zoom m-3" href="//localhost:4321/blog">See all post</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			
+			<div class="col-lg-4">
+				<div class="blog-preview__item">
+					<div class="blog-preview__item-thumb">
+						<img src="//localhost:4321/images/allpost/allPost-6.jpg" alt="post-image">
+					</div>
+					<div class="blog-preview__item-content bg-white">
+						<span class="small">September 13, 2020</span>
+						<h5 class="mb-0">
+							<a class="text-dark" href="//localhost:4321/blog/markdown-formatting-demo/">Markdown Formatting Demo</a>
+						</h5>
+					</div>
+				</div>
+			</div>
+			
+
+		</div>
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="blog-preview__header_button mobile">
+					<a class="btn btn-outline-secondary btn-zoom" href="//localhost:4321/blog">See all post</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
  
 
 
