--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
         </li>
         
         <li class="nav-item">
-          <a href="//localhost:4321/blog"
+          <a href="//localhost:4321/#blog"
             class="nav-link text-dark text-sm-center p-2 scroll">Blog</a>
         </li>
         
@@ -639,7 +639,7 @@ workout are items that I do my best to accomodate them in my life</p>
 						<img src="//localhost:4321/images/allpost/allPost-6.jpg" alt="post-image">
 					</div>
 					<div class="blog-preview__item-content bg-white">
-						<span class="small">September 13, 2020</span>
+						<span class="small">March 22, 2024</span>
 						<h5 class="mb-0">
 							<a class="text-dark" href="//localhost:4321/blog/markdown-formatting-demo/">Markdown Formatting Demo</a>
 						</h5>
