--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
         </li>
         
         <li class="nav-item">
-          <a href="//localhost:4321/"
+          <a href="//localhost:4321/blog"
             class="nav-link text-dark text-sm-center p-2 scroll">Blog</a>
         </li>
         
